load-test/cloudformation.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: Deploys OpenSearch with UBI plugin on Amazon EC2 instances.
  
Parameters:

  AMI:
    Type: String
    Default: ami-080e1f13689e07408
    Description: The AMI to use for the OpenSearch instances.

  EC2InstanceType:
    Type: String
    Default: t3.medium
    Description: The type of EC2 instance for the OpenSearch instances.

  KeyName:
    Type: String
    Description: The EC2 instance SSH key name.

  OpenSearchVersion:
    Type: String
    Default: 2.13.0
    Description: The version of OpenSearch to deploy.

  UbiPluginVersion:
    Type: String
    Default: 1.0.0
    Description: The version of the UBI plugin to deploy.

Resources:

  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: OpenSearch UBI Load Testing

  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: OS UBI

  InternetGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId: !Ref InternetGateway
      VpcId: !Ref VPC

  PublicSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: us-east-1a
      CidrBlock: 10.0.1.0/24
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: OS UBI Public Subnet (AZ1)

  PublicSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: us-east-1b
      CidrBlock: 10.0.2.0/24
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: OS UBI Public Subnet (AZ2)

  PublicSubnet3:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: us-east-1c
      CidrBlock: 10.0.3.0/24
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: OS UBI Public Subnet (AZ3)

  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: OS UBI Public Routes

  DefaultPublicRoute:
    Type: AWS::EC2::Route
    DependsOn: InternetGatewayAttachment
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  PublicSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnet1

  PublicSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnet2

  PublicSubnet3RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnet3      
      
  OpenSearchSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable HTTPS to nodes and all VPC traffic between nodes
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 9200
          ToPort: 9200
          CidrIp: 0.0.0.0/0          
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0          
        - IpProtocol: -1
          CidrIp: 10.0.0.0/16       
      VpcId: !Ref VPC 
      
  OSNode1EC2Instance:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: !Ref AMI
      InstanceType: !Ref EC2InstanceType
      KeyName: !Ref KeyName
      PrivateIpAddress: 10.0.1.20
      SubnetId: !Ref PublicSubnet1
      SecurityGroupIds: 
        - !Ref OpenSearchSecurityGroup
      Tags:
       - Key: Name
         Value: OS UBI OpenSearch Node 1
      UserData:
        Fn::Base64: !Sub |
            #!/bin/bash -xe
            exec > >(tee /var/log/user-data.log|logger -t user-data -s 2>/dev/console) 2>&1

            apt-get update && apt-get -y upgrade
            apt-get install -y openjdk-17-jdk

            echo '10.0.1.20   os01' >> /etc/hosts
            echo '10.0.2.20   os02' >> /etc/hosts
            echo '10.0.3.20   os03' >> /etc/hosts

            wget https://artifacts.opensearch.org/releases/bundle/opensearch/${OpenSearchVersion}/opensearch-${OpenSearchVersion}-linux-x64.deb
            env OPENSEARCH_INITIAL_ADMIN_PASSWORD="MySecurePassword123!" dpkg -i ./opensearch-${OpenSearchVersion}-linux-x64.deb

            echo 'node.name: os01' >> /etc/opensearch/opensearch.yml
            echo 'discovery.seed_hosts: os01,os02,os03' >> /etc/opensearch/opensearch.yml
            echo 'cluster.initial_master_nodes: os01,os02,os03' >> /etc/opensearch/opensearch.yml
            echo 'network.host: 0.0.0.0' >> /etc/opensearch/opensearch.yml
            echo 'cluster.name: ubi' >> /etc/opensearch/opensearch.yml

            # Disable security
            echo 'plugins.security.disabled: true' >> /etc/opensearch/opensearch.yml

            # Install UBI plugin
            /usr/share/opensearch/bin/opensearch-plugin install https://github.com/o19s/opensearch-ubi/releases/download/release-v${UbiPluginVersion}-os${OpenSearchVersion}/opensearch-ubi-plugin-v0.0.9-os${OpenSearchVersion}.zip

            systemctl enable opensearch
            systemctl start opensearch
            systemctl status opensearch

  OSNode2EC2Instance:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: !Ref AMI
      InstanceType: !Ref EC2InstanceType
      KeyName: !Ref KeyName
      PrivateIpAddress: 10.0.2.20
      SubnetId: !Ref PublicSubnet2
      SecurityGroupIds: 
        - !Ref OpenSearchSecurityGroup
      Tags:
       - Key: Name
         Value: OS UBI OpenSearch Node 2
      UserData:
        Fn::Base64: !Sub |
            #!/bin/bash -xe
            exec > >(tee /var/log/user-data.log|logger -t user-data -s 2>/dev/console) 2>&1

            apt-get update && apt-get -y upgrade
            apt-get install -y openjdk-17-jdk

            echo '10.0.1.20   os01' >> /etc/hosts
            echo '10.0.2.20   os02' >> /etc/hosts
            echo '10.0.3.20   os03' >> /etc/hosts

            wget https://artifacts.opensearch.org/releases/bundle/opensearch/${OpenSearchVersion}/opensearch-${OpenSearchVersion}-linux-x64.deb
            env OPENSEARCH_INITIAL_ADMIN_PASSWORD="MySecurePassword123!" dpkg -i ./opensearch-${OpenSearchVersion}-linux-x64.deb

            echo 'node.name: os02' >> /etc/opensearch/opensearch.yml
            echo 'discovery.seed_hosts: os01,os02,os03' >> /etc/opensearch/opensearch.yml
            echo 'cluster.initial_master_nodes: os01,os02,os03' >> /etc/opensearch/opensearch.yml
            echo 'network.host: 0.0.0.0' >> /etc/opensearch/opensearch.yml
            echo 'cluster.name: ubi' >> /etc/opensearch/opensearch.yml

            # Disable security
            echo 'plugins.security.disabled: true' >> /etc/opensearch/opensearch.yml

            # Install UBI plugin
            /usr/share/opensearch/bin/opensearch-plugin install https://github.com/o19s/opensearch-ubi/releases/download/release-v${UbiPluginVersion}-os${OpenSearchVersion}/opensearch-ubi-plugin-v0.0.9-os${OpenSearchVersion}.zip

            systemctl enable opensearch
            systemctl start opensearch
            systemctl status opensearch

  OSNode3EC2Instance:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: !Ref AMI
      InstanceType: !Ref EC2InstanceType
      KeyName: !Ref KeyName
      PrivateIpAddress: 10.0.3.20
      SubnetId: !Ref PublicSubnet3
      SecurityGroupIds: 
        - !Ref OpenSearchSecurityGroup
      Tags:
       - Key: Name
         Value: OS UBI OpenSearch Node 3
      UserData:
        Fn::Base64: !Sub |
            #!/bin/bash -xe
            exec > >(tee /var/log/user-data.log|logger -t user-data -s 2>/dev/console) 2>&1

            apt-get update && apt-get -y upgrade
            apt-get install -y openjdk-17-jdk

            echo '10.0.1.20   os01' >> /etc/hosts
            echo '10.0.2.20   os02' >> /etc/hosts
            echo '10.0.3.20   os03' >> /etc/hosts

            wget https://artifacts.opensearch.org/releases/bundle/opensearch/${OpenSearchVersion}/opensearch-${OpenSearchVersion}-linux-x64.deb
            env OPENSEARCH_INITIAL_ADMIN_PASSWORD="MySecurePassword123!" dpkg -i ./opensearch-${OpenSearchVersion}-linux-x64.deb

            echo 'node.name: os03' >> /etc/opensearch/opensearch.yml
            echo 'discovery.seed_hosts: os01,os02,os03' >> /etc/opensearch/opensearch.yml
            echo 'cluster.initial_master_nodes: os01,os02,os03' >> /etc/opensearch/opensearch.yml
            echo 'network.host: 0.0.0.0' >> /etc/opensearch/opensearch.yml
            echo 'cluster.name: ubi' >> /etc/opensearch/opensearch.yml                  

            # Disable security
            echo 'plugins.security.disabled: true' >> /etc/opensearch/opensearch.yml            

            # Install UBI plugin
            /usr/share/opensearch/bin/opensearch-plugin install https://github.com/o19s/opensearch-ubi/releases/download/release-v${UbiPluginVersion}-os${OpenSearchVersion}/opensearch-ubi-plugin-v0.0.9-os${OpenSearchVersion}.zip

            systemctl enable opensearch
            systemctl start opensearch
            systemctl status opensearch

Outputs:

  Node1PublicIP:
    Description: OS Node 1 Public Ip
    Value: !GetAtt OSNode1EC2Instance.PublicIp

  Node2PublicIP:
    Description: OS Node 2 Public Ip
    Value: !GetAtt OSNode2EC2Instance.PublicIp

  Node3PublicIP:
    Description: OS Node 3 Public Ip
    Value: !GetAtt OSNode3EC2Instance.PublicIp
